# cloud-platform

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
src/ai/: advisor.py
src/api/: database.py  main.py  models.py
src/dashboard/: index.html
src/provisioner/: terraform.py
terraform/: provider.tf
terraform/modules/environment/: main.tf  outputs.tf  variables.tf
terraform/modules/service/: main.tf  outputs.tf  variables.tf
tests/: test_api.py
